--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
           sudo apt install ruby 
           sudo apt install python3
           sudo apt install php8.1
-          sudo apt install raku
+          sudo apt install rakudo
           sudo apt install default-jdk
           sudo apt install perl
           sudo apt install nodejs
