--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@ jobs:
           cpanm --local-lib=~/perl5 local::lib && eval $(perl -I ~/perl5/lib/perl5/ -Mlocal::lib)
       - name: Install test harness prereqs
         run: |
+          eval $(perl -I ~/perl5/lib/perl5/ -Mlocal::lib)
           cpanm -n Capture::Tiny File::chdir Path::Tiny Term::ANSIColor YAML::XS
       - name: Check out repo
         uses: actions/checkout@v3
