--- a/.github/workflows/aoc2022.yml
+++ b/.github/workflows/aoc2022.yml
@@ -1,7 +1,7 @@
 name: AoC 2022
 on: [push]
 jobs:
-  Test Harness:
+  Tests:
     runs-on: ubuntu-latest
     steps:
       - name: Install system prereqs
