Finish solution to day 23 in Perl

--- a/2022/23/day.yml
+++ b/2022/23/day.yml
@@ -10,10 +10,10 @@ env:
 expect:
   tiny:
     PART1: 25
-    PART2: unknown
+    PART2: 4
   test:
     PART1: 110
-    PART2: unknown
+    PART2: 20
   real:
-    PART1: unknown
-    PART2: unknown
+    PART1: 4091
+    PART2: 1036
